--- a/src/components/RepoCard/RepoCard.css
+++ b/src/components/RepoCard/RepoCard.css
@@ -23,6 +23,11 @@
 .repo-card__basic-info-text {
     align-self: flex-start;
     margin-right: 10px;
+    
+}
+
+.repo-card__basic-info-text p {
+    word-wrap: break-word;
 }
 
 .repo-card__details {
